--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   app:
-    image: python:3.11.3-slim-bullseye
+    build:
+      context: .
+      dockerfile: Dockerfile
     working_dir: /var/www/
     container_name: app
     environment:
