--- a/docker/dev/requirements.txt
+++ b/docker/dev/requirements.txt
@@ -14,6 +14,7 @@ MarkupSafe==3.0.3
 marshmallow==4.0.1
 packaging==25.0
 psycopg2-binary==2.9.11
+python-dotenv==1.0.0
 SQLAlchemy==2.0.44
 typing_extensions==4.15.0
 webargs==8.7.0
