create docker prod build. Needs proper error handling

--- a/docker/production/Dockerfile
+++ b/docker/production/Dockerfile
@@ -6,7 +6,18 @@ COPY docker/production/requirements.txt .
 
 RUN python -m pip install --no-cache-dir -r requirements.txt
 
+COPY docker/production/env env
+RUN if [ -f env/.env ]; then \
+        echo ".env file found, using it"; \
+    else \
+        echo ".env file not found, using .env.example"; \
+        mv env/.env.example env/.env; \
+    fi
+
 COPY . /app
+
+RUN echo "PATH_TO_DOT_ENV=env/.env" > app/path_to_dot_env
+
 
 EXPOSE 8070
 
