--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -16,3 +16,15 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+
+  db:
+    image: postgres:15.4-alpine3.18
+    container_name: postgres-db
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: qwerty
+      POSTGRES_DB: db
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./db_data:/var/lib/postgresql/data
