--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    command: ["sh", "./docker/production/entrypoint.sh"]
 
   db:
     image: postgres:15.4-alpine3.18
